Fixes for txs sending

--- a/client/components/wallet/walletSend.html
+++ b/client/components/wallet/walletSend.html
@@ -59,7 +59,7 @@
 
       <div class="form-group col-md-12 my-2">
         <input type="submit" class="form-control btn btn-primary{{#if loadingMsg}} disabled{{/if}}" value="Send" id="inputPassword4">
-        <small class="form-text text-info">{{loadingMsg}}</small>
+        <div class="text-center text-muted mt-2">{{loadingMsg}}</div>
       </div>
 
 
