Improvements to ui: #3 #2 #16 #17 #12

--- a/client/components/wallet/walletAccounts.html
+++ b/client/components/wallet/walletAccounts.html
@@ -15,7 +15,7 @@
   <div class="row mt-3">
     <div class="col-md-3 mb-4">
       <div class="small">Account</div>
-      <div>{{user.address}}</div>
+      <div class="text-truncate">{{user.address}}</div>
     </div>
     <div class="col-md-3 mb-4">
       <div class="small">Keystore Version</div>
