--- a/client/components/wallet/walletTransactionsList.html
+++ b/client/components/wallet/walletTransactionsList.html
@@ -95,7 +95,7 @@
           {{!-- <td>{{memo}}</td> --}}
           {{!-- <td>{{txFee}}</td> --}}
           <td>{{toCurrency value}} {{shortSymbol txAsset}}</td>
-          <td class="text-center"><a href="{{link txHash}}"><i class="fa fa-external-link-square-alt"></i></a></td>
+          <td class="text-center"><a href="{{link txHash}}" target="_blank"><i class="fa fa-external-link-square-alt"></i></a></td>
         </tr>
       {{/each}}
     </tbody>
