--- a/client/lib/styles/_bootstrap_custom.scss
+++ b/client/lib/styles/_bootstrap_custom.scss
@@ -121,6 +121,8 @@ $btn-white-space: 'nowrap';
 $input-bg: $Darker-Gray;
 $input-border-color: $Light-Gray;
 $input-color: $Lighter-Gray;
+$input-disabled-bg: $gray-700;
+$custom-select-disabled-bg: $gray-700;
 
 // Lists
 $list-group-bg: $body-bg;
@@ -141,6 +143,11 @@ $font-weight-bold:            500;
 // $font-weight-bolder:          bolder;
 $font-size-base:              1rem; // Assumes the browser default, typically `16px`
 $link-color: $Accent-Green;
+
+
+$text-muted:                  $gray-300;
+
+
 
 // This includes $btn-font-family
 $input-btn-font-family:       Exo2;
