Fix wrong attribute

--- a/client/components/wallet/walletNew/walletImport.html
+++ b/client/components/wallet/walletNew/walletImport.html
@@ -19,7 +19,7 @@
 
       {{#unless isMnemonic}}
 
-        <form id="upload-keystore-form" class="form" autocomplete="off" disabled="disabled">
+        <form id="upload-keystore-form" class="form" autocomplete="off">
           <fieldset disabled="{{#if isLoading}}disabled{{/if}}">
 
           <div class="form-row">
