--- a/client/components/wallet/walletNew/walletImport.html
+++ b/client/components/wallet/walletNew/walletImport.html
@@ -39,8 +39,15 @@
             </div>
 
             <div class="form-group col-md-12">
-              <input type="submit" class="form-control form-control-lg btn btn-primary" value="Import">
-              <div class="text-center text-muted mt-2">{{loadingMsg}}</div>
+              <button type="submit" class="form-control form-control-lg btn btn-primary">
+                {{#if loadingMsg}}
+                <div class="spinner-border spinner-border-sm" role="status">
+                  <span class="sr-only">Loading...</span>
+                </div>
+                {{loadingMsg}}
+                {{else}}Import{{/if}}
+              </button>
+
             </div>
 
           </div> 
@@ -72,8 +79,14 @@
               </div>
 
               <div class="form-group col-md-12">
-                <input type="submit" class="form-control form-control-lg btn btn-primary{{#unless isLoading}} disabled{{/unless}}" value="Import">
-                <div class="text-center text-muted mt-2">{{loadingMsg}}</div>
+                <button type="submit" class="form-control form-control-lg btn btn-primary{{#unless isLoading}} disabled{{/unless}}">
+                  {{#if loadingMsg}}
+                  <div class="spinner-border spinner-border-sm" role="status">
+                    <span class="sr-only">Loading...</span>
+                  </div>
+                  {{loadingMsg}}
+                  {{else}}Import{{/if}}
+                </button>
               </div>
             </div>
 
