--- a/client/components/wallet/walletSend.html
+++ b/client/components/wallet/walletSend.html
@@ -33,7 +33,7 @@
       {{#unless (param 'asset')}}
         <div class="form-group col-md-12 mb-2">
           <label for="inputAsset">Asset</label>
-          <select class="form-control custom-select" id="inputAsset" name="asset">
+          <select class="form-control custom-select mb-3" id="inputAsset" name="asset">
 
             {{#each userAssets}}
               <option value="{{symbol}}">{{symbol}} ({{free}})</option>
@@ -58,8 +58,14 @@
 
 
       <div class="form-group col-md-12 my-2">
-        <input type="submit" class="form-control btn btn-primary{{#if loadingMsg}} disabled{{/if}}" value="Send" id="inputPassword4">
-        <div class="text-center text-muted mt-2">{{loadingMsg}}</div>
+        <button type="submit" class="form-control btn btn-primary{{#if loadingMsg}} disabled{{/if}}">
+          {{#if loadingMsg}}
+          <div class="spinner-border spinner-border-sm" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+          {{loadingMsg}}
+          {{else}}Send{{/if}}
+        </button>
       </div>
 
 
