--- a/client/components/wallet/walletUnlock.html
+++ b/client/components/wallet/walletUnlock.html
@@ -18,7 +18,7 @@
               <small id="passwordHelp" class="form-text text-warning">{{pwError}}</small>
             </div>
           </div>
-          <button type="submit" class="form-control btn btn-primary btn-brand">
+          <button type="submit" class="form-control btn btn-primary">
             {{#if loadingMsg}}
             <div class="spinner-border spinner-border-sm" role="status">
               <span class="sr-only">Loading...</span>
