--- a/client/components/wallet/walletCreate.html
+++ b/client/components/wallet/walletCreate.html
@@ -49,14 +49,19 @@
               </div>
 
               <div class="form-group col-md-12">
-                <button type="submit" class="form-control btn btn-primary">
-                  {{#if loadingMsg}}
-                  <div class="spinner-border spinner-border-sm" role="status">
-                    <span class="sr-only">Loading...</span>
-                  </div>
-                  {{loadingMsg}}
-                  {{else}}Create{{/if}}
-                </button>
+
+                  <button type="submit" class="form-control btn btn-dark btn-brand-border">
+                    <span>
+                      {{#if loadingMsg}}
+                      <div class="spinner-border spinner-border-sm" role="status">
+                        <span class="sr-only">Loading...</span>
+                      </div>
+                      {{loadingMsg}}
+                      {{else}}Create{{/if}}
+                      {{!-- <div class="btn-brand"></div> --}}
+                    </span>
+                  </button>
+
                 <div class="text-center text-muted mt-2">{{loadingMsg}}</div>
               </div>
             </div>
