--- a/client/components/wallet/walletNew/walletImport.html
+++ b/client/components/wallet/walletNew/walletImport.html
@@ -39,13 +39,15 @@
             </div>
 
             <div class="form-group col-md-12">
-              <button type="submit" class="form-control form-control-lg btn btn-primary">
-                {{#if loadingMsg}}
-                <div class="spinner-border spinner-border-sm" role="status">
-                  <span class="sr-only">Loading...</span>
-                </div>
-                {{loadingMsg}}
-                {{else}}Import{{/if}}
+              <button type="submit" class="form-control btn btn-dark btn-brand-border">
+                <span>
+                  {{#if loadingMsg}}
+                  <div class="spinner-border spinner-border-sm" role="status">
+                    <span class="sr-only">Loading...</span>
+                  </div>
+                  {{loadingMsg}}
+                  {{else}}Import{{/if}}
+                </span>
               </button>
 
             </div>
@@ -79,13 +81,15 @@
               </div>
 
               <div class="form-group col-md-12">
-                <button type="submit" class="form-control form-control-lg btn btn-primary{{#unless isLoading}} disabled{{/unless}}">
-                  {{#if loadingMsg}}
-                  <div class="spinner-border spinner-border-sm" role="status">
-                    <span class="sr-only">Loading...</span>
-                  </div>
-                  {{loadingMsg}}
-                  {{else}}Import{{/if}}
+                <button type="submit" class="form-control btn btn-dark btn-brand-border">
+                  <span>
+                    {{#if loadingMsg}}
+                    <div class="spinner-border spinner-border-sm" role="status">
+                      <span class="sr-only">Loading...</span>
+                    </div>
+                    {{loadingMsg}}
+                    {{else}}Import{{/if}}
+                  </span>
                 </button>
               </div>
             </div>
