--- a/client/components/wallet/walletAssets.html
+++ b/client/components/wallet/walletAssets.html
@@ -11,9 +11,9 @@
       </div>
       <div class="media-body d-flex">
 
-        <div class="mr-auto">
-          <div class="h5 mb-0">{{tokenName symbol}}</div>
-          <div class="small">{{symbol}}</div>
+        <div class="mr-auto d-md-flex align-items-md-center">
+          <div class="h5 mb-0 text-truncate mr-3">{{tokenName symbol}}</div>
+          <div class="small ">{{symbol}}</div>
         </div>
         <div class="">
           <div class="text-right font-italic color-grey small">{{decimals (price symbol)}}</div>
