--- a/client/lib/styles/_bootstrap_custom.scss
+++ b/client/lib/styles/_bootstrap_custom.scss
@@ -106,7 +106,7 @@ $theme-colors: (
   "warning": $Caution-Yellow,
   "info": $Accent-Blue,
   "light": $Light-Gray,
-  "dark": $Dark-Gray,
+  "dark": $Darker-Gray,
   "accent": $Accent-Green
 );
 
