--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,6 +1,6 @@
 <template name="navbar">
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
   <a class="navbar-brand text-uppercase font-size-h5" href="{{pathFor 'home'}}">
     <img src="/img/Asgard-Logo-White-128.png" class="mr-1" width="30" height="30" alt="">
     <span class="font-weight-bold">Asgard</span><span>&nbsp;Wallet</span>
