--- a/client/components/wallet/walletAccounts.html
+++ b/client/components/wallet/walletAccounts.html
@@ -31,13 +31,20 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-md-8 col-lg-6 ml-auto mr-auto">
 
-  <input type="button" class="btn btn-primary w-100 my-5" value="Lock Wallet" data-event="lockWallet">
+      <input type="button" class="btn btn-primary w-100 my-5" value="Lock Wallet" data-event="lockWallet">
 
-  <h5>Wallet Management</h5>
+      <h5>Wallet Management</h5>
 
-  <input type="button" class="btn btn-primary w-100 my-2" value="View Phrase" data-event="viewPhrase">
-  <a href="{{downloadLink}}" download="keystore.txt" class="btn btn-primary w-100 mb-2">Export Keystore</a>
-  <input type="button" class="btn btn-danger w-100 my-3" value="Remove Wallet" data-event="deleteVault" />
+      <input type="button" class="btn btn-primary w-100 my-2" value="View Phrase" data-event="viewPhrase">
+      <a href="{{downloadLink}}" download="keystore.txt" class="btn btn-primary w-100 mb-2">Export Keystore</a>
+      <input type="button" class="btn btn-danger w-100 my-3" value="Remove Wallet" data-event="deleteVault" />
+
+    </div>
+  </div>
+
+
 
 </template>
