--- a/client/components/wallet/walletNew/walletStart.html
+++ b/client/components/wallet/walletNew/walletStart.html
@@ -5,7 +5,11 @@
     <div class="col-md-8 col-lg-6 ml-auto mr-auto">
       <img class="mx-auto d-block w-25 mb-5" src="/img/Asgard-Wallet-Gradient-512.svg">
       <h5 class="text-center mb-5">Asgard Wallet</h5>
-      <a class="btn btn-primary w-100 mb-4" href="{{pathFor 'walletCreate'}}">New</a>
+      <a class="form-control btn btn-dark btn-brand-border mb-4" href="{{pathFor 'walletCreate'}}">
+        <span>
+          New
+        </span>
+      </a>
       <div class="form-group">
         <a class="form-control btn btn-primary w-100 mb-4" href="{{pathFor 'walletImport'}}">Import</a>
       </div>
