--- a/client/components/widgets/circleColorIcon.html
+++ b/client/components/widgets/circleColorIcon.html
@@ -1,5 +1,9 @@
 <template name="circleColorIcon">
 
+  {{#if eq shortSymbol 'RUNE'}}
+  <img src="/img/RUNE-ICON.svg" width="{{imgSize size}}">
+  {{else}}
   <div class="circle-icon-{{size}} d-flex align-items-center text-white" style="{{circleStyle shortSymbol}}"><div class="text-center w-100">{{shortSymbol}}</div></div>
+  {{/if}}
 
 </template>
