minor fix to crumb nav

--- a/client/components/wallet/walletTransactionsList.html
+++ b/client/components/wallet/walletTransactionsList.html
@@ -52,22 +52,13 @@
 {{else}}
 
   <table class="table table-sm table-dark table-borderless">
-    <colgroup>
-      <col class="col-sm-1">
-      <col class="col-sm-1">
-      <col class="col-sm-4">
-      <col class="col-sm-4">
-      {{!-- <col class="d-sm-none"> --}}
-      {{!-- <col class="d-sm-none"> --}}
-      <col class="col-sm-1">
-      <col class="col-sm-1">
-    </colgroup>
+
     <thead>
       <tr>
         <th scope="col">Date</th>
         <th scope="col">Type</th>
-        <th scope="col">From</th>
-        <th scope="col">To</th>
+        <th scope="col">With</th>
+        <th scope="col"></th>
         {{!-- <th scope="col">Memo</th> --}}
         {{!-- <th scope="col">Fee</th> --}}
         <th scope="col">Amount</th>
