--- a/client/components/widgets/breadcrumb.html
+++ b/client/components/widgets/breadcrumb.html
@@ -3,7 +3,7 @@
   {{!-- <a class="breadcrumb btn btn-sm btn-text position-absolute mt-5" href="#"><i class="fa fa-chevron-left"></i> Back</a> --}}
 
   <nav aria-label="breadcrumb">
-    <ol class="position-absolute breadcrumb">
+    <ol class="breadcrumb">
 
       {{!-- javascript:history.back() --}}
 
