Improve transactions list view #49

--- a/client/components/wallet/walletTransactionsList.html
+++ b/client/components/wallet/walletTransactionsList.html
@@ -7,7 +7,6 @@
 
     {{> transactionsList 
       transactions=transactions
-      amount=(decimals value)
     }}
 
   {{else}}
@@ -26,17 +25,20 @@
       <li class="media list-group-item p-1">
         <div class="media-body d-flex align-items-center justify-content-start">
 
-          <div class="font-weight-bold small mr-2">{{txType}}</div>
+          {{#let party=(txKind fromAddr toAddr)}}
+          <div class="d-md-none col-2 col-lg-1 px-1 font-weight-bold small text-uppercase ">{{party.msg}}</div>
+          <div class="d-none d-md-block col-2 col-lg-1 px-1 font-weight-bold text-uppercase ">{{party.msg}}</div>
 
           <div class="text-truncate mr-auto p-1">
-            <div class="small text-truncate"><strong>To:</strong> {{toAddr}}</div>
-            <div class="small text-truncate"><strong>From:</strong> {{fromAddr}}</div>
+            <div class="text-truncate"><span>{{party.label}}:</span> <span class="small text-monospace">{{party.address}}</span></div>
+            {{!-- <div class="small text-truncate"><strong>From:</strong> {{fromAddr}}</div> --}}
           </div>
 
           <div class="pl-1">
-            <div class="text-right">{{toCurrency value}}</div>
-            <div class="small text-right">{{txAsset}}</div>
+            <div class="text-right"><span class="text-{{party.color}}">{{party.op}}{{toCurrency value}}</span> <span class="d-none d-md-inline">[{{shortSym txAsset}}]</span></div>
+            <div class="small text-right text-muted text-nowrap">{{txAsset}}</div>
           </div>
+          {{/let}}
 
         </div>
       </li>
