--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,8 +7,8 @@
   </a>
   {{#if isUnlocked}}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <!-- <span class="navbar-toggler-icon text-info"></span> -->
-    <i class="fa fa-lg fa-bars text-info"></i>
+    <span class="navbar-toggler-icon text-info"></span>
+    <!-- <i class="fa fa-lg fa-bars text-info"></i> -->
   </button>
 
   <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
