UI improvements and duplicate tx handling #59

--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
   <a class="navbar-brand text-uppercase font-size-h5" href="{{pathFor 'home'}}">
-    <img src="/img/Asgard-Tri-White.png" class="mr-1" width="30" height="30" alt="">
+    <img src="/img/Asgard-Tri-White.png" class="float-left mr-2" with="28" height="28" alt="">
     <span class="font-weight-bold">Asgard</span><span>&nbsp;Wallet</span>
   </a>
   {{#if isUnlocked}}
