--- a/client/components/wallet/walletSend.html
+++ b/client/components/wallet/walletSend.html
@@ -69,8 +69,8 @@
           </div>
 
           <div class="form-group col-md-12 mb-2">
-            <label for="inputAmount">Password</label>
-            <input type="password" class="form-control mb-3" name="password" id="inputAmount" aria-describedby="passwordHelp" placeholder="password">
+            <label for="inputPassword">Password</label>
+            <input type="password" class="form-control mb-3" name="password" id="inputPassword" aria-describedby="passwordHelp" placeholder="password">
             <small class="form-text text-warning">{{passwordError}}</small>
           </div>
 
