--- a/client/components/wallet/walletAccounts.html
+++ b/client/components/wallet/walletAccounts.html
@@ -38,7 +38,7 @@
 
       <h5>Wallet Management</h5>
 
-      <input type="button" class="btn btn-primary w-100 my-2" value="View Phrase" data-event="viewPhrase">
+      <input type="button" class="btn btn-primary w-100 my-2 disabled" value="View Phrase" data-event="viewPhrase">
       <a href="{{downloadLink}}" download="keystore.txt" class="btn btn-primary w-100 mb-2">Export Keystore</a>
       <input type="button" class="btn btn-danger w-100 my-3" value="Remove Wallet" data-event="deleteVault" />
 
