--- a/client/components/wallet/walletNew/walletStart.html
+++ b/client/components/wallet/walletNew/walletStart.html
@@ -3,7 +3,7 @@
   <div class="row">
 
     <div class="col-md-8 col-lg-6 ml-auto mr-auto">
-      <img class="mx-auto d-block w-25 mb-5" src="/img/Asgard-Tri-Gradient.png">
+      <img class="mx-auto d-block w-25 mb-5" src="/img/Asgard-Wallet-Gradient-512.svg">
       <h5 class="text-center mb-5">Asgard Wallet</h5>
       <a class="form-control btn btn-dark btn-brand-border mb-4" href="{{pathFor 'walletCreate'}}">
         <span>
