--- a/client/lib/styles/main.scss
+++ b/client/lib/styles/main.scss
@@ -51,8 +51,8 @@ h1, h2, h3, h4 ,h5 {
   cursor: pointer;
 }
 
-li.media[data-nav]:hover {
-  background-color: $Light-Gray;
+ul.list-links > li:hover {
+  background-color: $Primary-Gray;
 }
 
 
