Address UI and IA issues #46 #53 #75 #79 #80

--- a/client/components/wallet/walletCreate.html
+++ b/client/components/wallet/walletCreate.html
@@ -52,6 +52,8 @@
                 <small id="repeatPasswordHelp" class="form-text text-warning">{{repeatPwError}}</small>
               </div>
 
+              <p class="text-warning mb-4 font-weight-bold">Make sure to export and backup your keyfile (next) as this is the only way to recover this type of account</p>
+
               <div class="form-group col-md-12">
 
                   <button type="submit" class="form-control btn btn-dark btn-brand-border">
