--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
   <a class="navbar-brand text-uppercase font-size-h5" href="{{pathFor 'home'}}">
     <img src="/img/Asgard-Tri-White.png" class="float-left mr-2" with="28" height="28" alt="">
-    <span class="font-weight-bold">Asgard</span><span>&nbsp;Wallet</span><span class='small text-muted'>BETA</span>
+    <span class="font-weight-bold">Asgard</span><span>&nbsp;Wallet</span><span class='small text-muted pl-2'>BETA</span>
   </a>
   {{#if isUnlocked}}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
