--- a/client/components/wallet/walletNew/walletNewMnemonicConfirm.html
+++ b/client/components/wallet/walletNew/walletNewMnemonicConfirm.html
@@ -8,36 +8,44 @@
   </div>
   <div class="row">
 
-    <div class="col">
+    <div class="col-md-8 mx-auto">
+      <form name="generate-wallet-form" id="generate-wallet-form" class="form">
 
       <!-- <label>Mnemonic HD wallet seed</label> -->
-      <div class="card mb-3 border">
-        <div class="card-body">
-          <div class="h3 text-justify">
-            <div class="d-inline-block">&nbsp;</div>
+      <div class="card border mb-3">
+        <div class="card-body p-2" style="min-height: 122px;">
+          <div class="h3 mb-0 text-justify">
             {{#each word in confirmWordsList}}
-              <span class="badge badge-lg badge-light">{{word}}
-                <i class="fa fa-times text-muted pl-1" data-event="removeConfirmWord" data-param="{{word}}"></i>
+              <span class="badge badge-lg badge-light position-relative pr-1 text-{{#if word.error}}danger{{else}}white{{/if}}" data-event="removeConfirmWord" data-param="{{word.text}}">{{word.text}}
+                <span class="mr-1"><i class="fa fa-sm fa-times"></i></span>
               </span>
             {{/each}}
           </div>
         </div>
       </div>
+      <div class="d-flex">
+        <div id="phraseHelp" class="form-text text-warning small">{{phraseError}}</div>
+      </div>
 
-            <label>Select in correct order</label>
+
             
-            <div class="row">
+            <div class="row mt-4">
+
+              <div class="col-12">
+                <label class="display-block">Select in correct order
+                  <span class="btn btn-sm btn-text mr-auto" data-event="resetPhrase"><i class="fa fa-redo"></i></span>
+                </label>
+              </div>
 
               {{#each word in wordslist}}
-                <div class="col-md-3 h4">
-                  <span class="btn btn-sm btn-primary {{word.style}}" data-event="addConfirmWord" data-param="{{word.text}}">{{word.text}}</span>
+                <div class="col-6 col-md-3 h4">
+                  <span class="btn btn-sm btn-primary {{word.style}} w-100" data-event="addConfirmWord" data-param="{{word.text}}">{{word.text}}</span>
                 </div>
               {{/each}}
 
             </div>
 
           
-      <form name="generate-wallet-form" id="generate-wallet-form" class="form">
         <fieldset disabled="{{#if loadingMsg}}disabled{{/if}}">
           <div class="form-row">
 
