Minor fixes and code cleanup

--- a/client/lib/styles/main.scss
+++ b/client/lib/styles/main.scss
@@ -206,6 +206,12 @@ ul.list-links > li:hover {
   // right: 18px;
 }
 
+.badge.disabled {
+  opacity: $btn-disabled-opacity;
+  cursor: pointer;
+  pointer-events: none;
+}
+
 
 
 // Custom component styles
