--- a/client/components/wallet/walletCreate.html
+++ b/client/components/wallet/walletCreate.html
@@ -52,7 +52,7 @@
                 <small id="repeatPasswordHelp" class="form-text text-warning">{{repeatPwError}}</small>
               </div>
 
-              <p class="text-warning mb-4 font-weight-bold">Make sure to export and backup your keyfile (next) as this is the only way to recover this type of account</p>
+              <p class="text-warning mb-4 font-weight-bold">Make sure to export and backup your keystore file on the next step. This is required to recover this type of account in case of loss of access to wallet</p>
 
               <div class="form-group col-md-12">
 
