--- a/client/components/wallet/walletNew/walletStart.html
+++ b/client/components/wallet/walletNew/walletStart.html
@@ -13,8 +13,17 @@
       <div class="form-group">
         <a class="form-control btn btn-primary w-100 mb-4" href="{{pathFor 'walletImport'}}">Import</a>
       </div>
+
+      <div>
+        <div class="h5 text-uppercase text-center">Attention:</div>
+        <p class="text-justify"> This beta software is provided for testing purposes as is, with no warranty. Usage is restricted to Binance testnet.</p>
+      </div>
     </div>
 
 
+  </div>
+  <div class="row">
+    <div class="col">
+    </div>
   </div>
 </template>
