Further React integrations, and codebase re-organization

--- a/client/components/wallet/walletTransactionsList.html
+++ b/client/components/wallet/walletTransactionsList.html
@@ -5,13 +5,10 @@
 
     {{#unless transactions}}<div class="text-italic text-muted">No transactions yet...</div>{{/unless}}
 
-    {{> transactionsList 
-      transactions=transactions
-    }}
+    {{> transactionsList transactions=transactions}}
 
   {{else}}
 
-{{!-- Table stuff goes here --}}
     {{> transactionsTable transactions=transactions sender=(sender fromAddr) amount=(decimals value) }}
 
   {{/unless}}
