--- a/imports/ui/lib/styles/main.scss
+++ b/imports/ui/lib/styles/main.scss
@@ -83,15 +83,15 @@ ul.list-links > li:hover {
 }
 
 // Breadcrumb
-.breadcrumb {
-  z-index: 900;
-  background: none;
-  margin-bottom: -20px;
-  >.breadcrumb-item {
-    color: $Accent-Green;
-    font-family: Exo2;
-  }
-}
+// .breadcrumb {
+//   z-index: 900;
+//   background: none;
+//   margin-bottom: -20px;
+//   >.breadcrumb-item {
+//     color: $Accent-Green;
+//     font-family: Exo2;
+//   }
+// }
 
 
 // Buttons
